# LearnWebGPU-Code

./: .gitignore  .gitmodules  AbstractRenderer.h  Application.cpp  Application.h  CMakeLists.txt  DualContouringRenderer.cpp  DualContouringRenderer.h  GltfDebugRenderer.cpp  GltfDebugRenderer.h  GpuScene.cpp  GpuScene.h  LICENSE  LineRenderer.cpp  LineRenderer.h  MarchingCubesRenderer.cpp  MarchingCubesRenderer.h  MarchingSquaresRenderer.cpp  MarchingSquaresRenderer.h  ProceduralTree.cpp  ProceduralTree.h  README.md  ResourceManager.cpp  ResourceManager.h  coroutine-hack.h  glfw3webgpu.c  glfw3webgpu.h  ibl-utils.cpp  ibl-utils.h  imgui.ini  implementations.cpp  macros.h  main.cpp  save_image.h  save_texture.h  shell.html  stb_image.h  stb_image_write.h  tiny_gltf.h  webgpu-gltf-utils.cpp  (+6 more)
.github/workflows/: cmake.yml
filament/: Cubemap.cpp  Cubemap.h  Image.cpp  Image.h
glfw/: CMakeLists.txt  README.md
glfw3webgpu/: CMakeLists.txt  README.md  glfw3webgpu.c  glfw3webgpu.h
imgui/: CMakeLists.txt
imgui/backends/: imgui_impl_wgpu.cpp
resources/: .gitignore  DualContouringRenderer.Bake.wgsl  LineRenderer.Bake.wgsl  LineRenderer.Draw.wgsl  MarchingCubesRenderer.Bake.wgsl  MarchingCubesRenderer.Draw.wgsl  MarchingSquaresRenderer.Bake.wgsl  compute-shader.wgsl  compute-shader.wsl  draw-frame.wgsl  fourareen.mtl  pyramid.txt  shader.wgsl  shader.wsl  webgpu.txt
sdl2webgpu/: CMakeLists.txt  README.md  sdl2webgpu.c  sdl2webgpu.h
sdl2webgpu/.github/workflows/: cmake.yml
sdl2webgpu/examples/: .gitignore  CMakeLists.txt  hello-sdl2webgpu.c  utils.cmake
src/: main.c  webgpu-utils.c  webgpu-utils.h
webgpu/: CMakeLists.txt  README.md  commit-sha  webgpu-ext-foo.h  webgpu.cmake  webgpu.hpp  wgpu_native.lib
webgpu/include/webgpu/: webgpu.hpp
webgpu/wgpu-native/include/webgpu/: webgpu.hpp
